<resources>
    <string name="app_name">File Sharing IATE</string>

    <!--Menu Titles Strings-->
    <string name="menu_main">Главная</string>
    <string name="menu_request">Новая заявка</string>
    <string name="menu_mail">Почта</string>
    <string name="menu_search_button">Найти</string>
    <string name="menu_search_hint">Поиск..</string>
    <string name="requests_hint">Выберите тип заявки:</string>

    <!--Sign In Page Strings-->
    <string name="head_login_name">Авторизация</string>
    <string name="login_name">Логин</string>
    <string name="password_name">Пароль</string>
    <string name="login_name_hint">Введите логин..</string>
    <string name="password_name_hint">Введите пароль..</string>
    <string name="login_button_name">Войти</string>

    <!--Form Filling Page Strings-->
    <string name="af_form_hint">Заполните форму</string>
    <string name="af_form_button">Отправить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>