<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/si_textView4"
        android:layout_marginVertical="24dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/head_login_name"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/si_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:layout_marginTop="16dp"
        android:layout_alignStart="@+id/si_editText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/si_textView4"/>

    <EditText
        android:layout_gravity="center"
        android:id="@+id/si_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/login_name_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:layout_below="@+id/si_textView2"
        android:theme="@style/MyEditText"/>

    <TextView
        android:id="@+id/si_textView3"
        android:layout_below="@+id/si_editText"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignStart="@+id/si_editTextTextPassword"/>

    <EditText
        android:id="@+id/si_editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password_name_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_below="@+id/si_textView3"
        android:theme="@style/MyEditText"/>

    <Button
        android:id="@+id/si_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/si_editTextTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onLogin"
        android:text="@string/login_button_name"
        android:textColor="@color/white"/>

</RelativeLayout>